# bridge/utility/api.yaml
@@ -14,16 +14,12 @@ tags:
     description: "Operations about product"
   - name: "cart"
     description: "Operations about cart"
-  - name: "user"
-    description: "Operations about user"
-  - name: "address"
-    description: "Operations about address"
+  - name: "cartProduct"
+    description: "Operations abount the products in a specific cart"
   - name: "country"
     description: "Operations about countries"
   - name: "sub countries"
     description: "Operations about countries subdivisions"
-  - name: "shipping"
-    description: "Operations about user and user address"
 schemes:
   - "http"
 
@@ -135,7 +131,6 @@ paths:
               $ref: "#/definitions/AllProducts"
           "404":
             description: "Products not found"
-
   /cart:
     post:
       tags:
@@ -197,9 +192,34 @@ paths:
         "404":
           description: "cart not found"
   /cart/{cartId}/product/{productId}:
+    get:
+      tags:
+        - "cartProduct"
+      summary: "get a specific product - cart"
+      operationId: "GetProductCart"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "cartId"
+          in: "path"
+          description: "Id of the cart"
+          required: true
+          type: "integer"
+          format: "int64"
+        - name: "productId"
+          in: "path"
+          description: "Id of the product to insert in the cart"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/CartProduct"
     post:
       tags:
-        - "cart"
+        - "cartProduct"
       summary: "Update a product to cart"
       description: "Update a product to cart"
       operationId: "updateProductToCart"
@@ -237,21 +257,56 @@ paths:
                 type: "integer"
                 format: "int64"
                 example: 2
+              last_update:
+                type: "string"
+                format: "date-time"
       responses:
         "200":
           description: "successful operation"
+    put:
+      tags:
+        - "cartProduct"
+      summary: "Overwrite a product to cart"
+      description: "Overwrite a product to cart"
+      operationId: "OverwriteProductToCart"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "cartId"
+          in: "path"
+          description: "Id of the cart"
+          required: true
+          type: "integer"
+          format: "int64"
+        - name: "productId"
+          in: "path"
+          description: "Id of the product to insert in the cart"
+          required: true
+          type: "integer"
+          format: "int64"
+        - in: "body"
+          name: "body"
+          description: "Created cart object"
+          required: true
           schema:
             type: "object"
             required:
-              - "cartId"
+              - "operation"
+              - "quantity"
             properties:
-              cartId:
+              quantity:
                 type: "integer"
                 format: "int64"
-                example: 5
+                example: 2
+              last_update:
+                type: "string"
+                format: "date-time"
+      responses:
+        "200":
+          description: "successful operation"
     delete:
       tags:
-      - "cart"
+      - "cartProduct"
       summary: "Delete the product inside cart"
       description: "Delete the product inside cart"
       operationId: "deleteCartProduct"
@@ -275,87 +330,6 @@ paths:
           description: "Invalid ids supplied"
         "404":
           description: "relation not found"
-
-  /Shipping:
-    post:
-      tags:
-          - "shipping"
-      description: "Insert shipping informations about user and address"
-      operationId: "createShipping"
-      produces:
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "Created user and address objects"
-          required: true
-          schema:
-            $ref: "#/definitions/Shipping"
-      responses:
-        default:
-          description: "successful operation"
-
-  /user:
-    post:
-      tags:
-        - "user"
-      description: "Create user"
-      operationId: "createUser"
-      produces:
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "Created user object"
-          required: true
-          schema:
-            $ref: "#/definitions/User"
-      responses:
-        default:
-          description: "successful operation"
-  /user/{userId}:
-    get:
-      tags:
-        - "user"
-      summary: "Get user by id"
-      description: ""
-      operationId: "getUserById"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "userId"
-          in: "path"
-          required: true
-          type: "integer"
-          format: "int64"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/User"
-        "400":
-          description: "Invalid id supplied"
-        "404":
-          description: "User not found"
-    delete:
-      tags:
-        - "user"
-      summary: "Delete user"
-      operationId: "deleteUser"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "userId"
-          in: "path"
-          description: "The id that needs to be deleted"
-          required: true
-          type: "integer"
-          format: "int64"
-      responses:
-        "400":
-          description: "Invalid id supplied"
-        "404":
-          description: "User not found"
   /list-countries:
     get:
       tags:
@@ -416,89 +390,8 @@ paths:
             $ref: "#/definitions/AllSubCountries"
         "404":
           description: "Sub Countries not found"
-  /address:
-    post:
-      tags:
-        - "address"
-      description: "Add a new address"
-      operationId: "addAddress"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "Address object that needs to be added to the database"
-          required: true
-          schema:
-            $ref: "#/definitions/Address"
-      responses:
-        "400":
-          description: "Invalid input"
-  /address/{addressId}:
-    get:
-      tags:
-        - "address"
-      summary: "Find address by ID"
-      description: "Returns a single address"
-      operationId: "getAddressById"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "addressId"
-          in: "path"
-          description: "ID of address to return"
-          required: true
-          type: "integer"
-          format: "int64"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Address"
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "address not found"
-    delete:
-      tags:
-        - "address"
-      summary: "Deletes an address"
-      description: "Delete an address"
-      operationId: "deleteAddress"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "addressId"
-          in: "path"
-          description: "ID of address to delete"
-          required: true
-          type: "integer"
-          format: "int64"
-      responses:
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "address not found"
 
 definitions:
-  User:
-    type: "object"
-    required:
-      - "firstName"
-      - "lastName"
-      - "email"
-    properties:
-      id_user:
-        type: "integer"
-        format: "int64"
-      firstName:
-        type: "string"
-      lastName:
-        type: "string"
-      email:
-        type: "string"
   Country:
     type: "object"
     properties:
@@ -532,35 +425,6 @@ definitions:
     type: array
     items:
       $ref: '#/definitions/CountrySubdivisions'
-  Address:
-    type: "object"
-    required:
-      - "city"
-      - "address"
-      - "postalCode"
-      - "country"
-      - "province"
-    properties:
-      id_address:
-        type: "integer"
-        format: "int64"
-      city:
-        type: "string"
-        example: "Roma"
-      address:
-        type: "string"
-        example: "Via Giacomo Matteotti n.23"
-      postalCode:
-        type: "string"
-        example: "97019"
-      country:
-        type: "string"
-        example: "Italia"
-      province:
-        type: "string"
-        maxLength: 2
-        minLength: 2
-        example: "RG"
   Cart:
     type: "object"
     required:
@@ -601,7 +465,22 @@ definitions:
         type: "integer"
         format: "int64"
         example: 50
-
+  CartProduct:
+    type: "object"
+    properties:
+      id_cart:
+        type: "integer"
+        format: "int64"
+      id_product:
+        type: "integer"
+        format: "int64"
+      quantity:
+        type: "integer"
+        format: "int64"
+        example: 30
+      last_update:
+        type: "string"
+        format: "date-time"
   Product:
     type: "object"
     required:
@@ -610,8 +489,6 @@ definitions:
       - "price"
       - "currencyCode"
       - "status"
-      - "quantity"
-      - "total_price"
     properties:
       id_product:
         type: "integer"
@@ -640,14 +517,9 @@ definitions:
         type: "integer"
         format: "int64"
         example: 30
-      quantity:
-        type: "integer"
-        format: "int64"
-        example: 3
-      total_price:
-        type: "integer"
-        format: "int64"
-        example: 45
+      last_update:
+        type: "string"
+        format: "date-time"
   PostProduct:
     type: "object"
     required:
@@ -656,6 +528,7 @@ definitions:
       - "currencyCode"
       - "status"
       - "stock"
+      - "last_update"
     properties:
       name:
         type: "string"
@@ -680,59 +553,13 @@ definitions:
         type: "integer"
         format: "int64"
         example: 30
+      last_update:
+        type: "string"
+        format: "date-time"
   AllProducts:
     type: array
     items:
       $ref: '#/definitions/Product'
-
-  Shipping:
-    type: "object"
-    required:
-      - "firstName"
-      - "lastName"
-      - "email"
-      - "city"
-      - "address"
-      - "postalCode"
-      - "country"
-      - "province"
-    properties:
-      firstName:
-        type: "string"
-        example: "Mario"
-      lastName:
-        type: "string"
-        example: "Rossi"
-      email:
-        type: "string"
-        example: "mario.rossi@gmail.com"
-      city:
-        type: "string"
-        example: "Roma"
-      address:
-        type: "string"
-        example: "Via Giacomo Matteotti n.23"
-      postalCode:
-        type: "string"
-        example: "97019"
-      country:
-        type: "string"
-        example: "Italia"
-      province:
-        type: "string"
-        maxLength: 2
-        minLength: 2
-        example: "RG"
-  ApiResponse:
-    type: "object"
-    properties:
-      code:
-        type: "integer"
-        format: "int32"
-      type:
-        type: "string"
-      message:
-        type: "string"
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
